# product_management

./: .gitignore  README.md  pyproject.toml
locale/allauth/pt_BR/LC_MESSAGES/: django.po
src/accounts/: urls.py
src/home/: views.py
src/home/templates/: index.html
src/home/templates/layouts/: base_home.html
src/locale/allauth/pt_BR/LC_MESSAGES/: django.mo
src/product_management/: settings.py  urls.py
src/products/: forms.py  models.py  urls.py  views.py
src/products/migrations/: 0001_initial.py
src/products/templates/: create.html
src/static/css/: style.css
src/templates/allauth/account/: login.html  signup.html
src/templates/allauth/allauth/elements/: h2.html  p.html
src/templates/allauth/allauth/layouts/: base.html
static/css/: style.css
styles/: package.json  postcss.config.js  tailwind.config.js  tailwind.css
styles/components/: alert.css  button.css  form.css
templates/allauth/account/: email.html  email_change.html  login.html  logout.html  password_change.html  signup.html
templates/allauth/allauth/elements/: field.html  fields.html  h1.html  h2.html
templates/allauth/allauth/layouts/: base.html
templates/apps/layouts/: base.html
